// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-cta-button Default 1`] = `
<DocumentFragment>
  <p>
    <a
      class="cta-btn"
      href="https://ebay.com"
    >
      <span
        class="cta-btn__cell"
      >
        <span>
          Take Action Now!
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--arrow-right-24"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-arrow-right-24"
          />
        </svg>
      </span>
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-cta-button Fluid 1`] = `
<DocumentFragment>
  <p>
    <a
      class="cta-btn cta-btn--fluid"
      href="https://ebay.com"
    >
      <span
        class="cta-btn__cell"
      >
        <span>
          100%
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--arrow-right-24"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-arrow-right-24"
          />
        </svg>
      </span>
    </a>
  </p>
  <p>
    <a
      class="cta-btn cta-btn--large cta-btn--fluid"
      href="https://ebay.com"
    >
      <span
        class="cta-btn__cell"
      >
        <span>
          Large!
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--arrow-right-24"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-arrow-right-24"
          />
        </svg>
      </span>
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-cta-button Large 1`] = `
<DocumentFragment>
  <p>
    <a
      class="cta-btn cta-btn--large"
      href="https://ebay.com"
    >
      <span
        class="cta-btn__cell"
      >
        <span>
          Large Button
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--arrow-right-24"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-arrow-right-24"
          />
        </svg>
      </span>
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-cta-button Truncated 1`] = `
<DocumentFragment>
  <div
    style="max-width: 200px;"
  >
    <p>
      <a
        class="cta-btn cta-btn--truncated"
        href="https://ebay.com"
      >
        <span
          class="cta-btn__cell"
        >
          <span>
            Wide Long Call To Action!
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--arrow-right-24"
            focusable="false"
            height="8"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-arrow-right-24"
            />
          </svg>
        </span>
      </a>
    </p>
    <p>
      <a
        class="cta-btn cta-btn--large cta-btn--truncated"
        href="https://ebay.com"
      >
        <span
          class="cta-btn__cell"
        >
          <span>
            Go Big with Call To Action!
          </span>
          <svg
            aria-hidden="true"
            class="icon icon--arrow-right-24"
            focusable="false"
            height="8"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-arrow-right-24"
            />
          </svg>
        </span>
      </a>
    </p>
  </div>
</DocumentFragment>
`;
